--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,12 +3,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ccee8d;
+    background-color: white;
     padding: 20px;
   }
   
   .logo img {
-    height: 50px;
+    height: 70px;
   }
   
   .menu-links {
@@ -27,17 +27,19 @@
   }
   
   .menu-links a {
-    color: #fff;
+    color: black;
     text-decoration: none;
     font-weight: bold;
     text-transform: uppercase;
+    font-size: 30px;
   }
   
   .cart a {
+    font-size: 30px;
     display: inline-block;
     padding: 10px;
-    background-color: #fff;
-    color: #333;
+    font-size: large;
+    color: black;
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
