--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,14 +3,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
-    padding: 20px;
+    background-color: rgb(118, 207, 96);
+    padding: 5px;
   }
   
   .logo img {
     height: 70px;
   }
   
+  .logo img:hover {
+    transform: rotate(360deg);
+  transition: transform 1s ease-in-out;
+  }
+
   .menu-links {
     display: flex;
     list-style: none;
@@ -31,14 +36,13 @@
     text-decoration: none;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 20px;
   }
   
   .cart a {
-    font-size: 30px;
+    font-size: 20px;
     display: inline-block;
     padding: 10px;
-    font-size: large;
     color: black;
     border-radius: 5px;
     text-decoration: none;
